Complete dino game (needs adjustment) Fixed paths in doodle jump Clean up in some files

--- a/Games/Breakout/style.css
+++ b/Games/Breakout/style.css
@@ -10,10 +10,3 @@ body {
 	height: 100%;
 	/* font-family: 'Press Start 2P', cursive; */
 }
-
-/* #game {
-	margin: 10px auto;
-	padding: 0;
-	width: 800px;
-	height: 600px;
-} */
